--- a/src/style.css
+++ b/src/style.css
@@ -361,6 +361,7 @@
     color: #fff ;
     font-size: 24px;
     font-weight: 900;
+    width: 100%;
     margin-right: 30px !important;
     font-family: 'Roboto', sans-serif !important;
 }
