--- a/src/style.css
+++ b/src/style.css
@@ -1849,7 +1849,7 @@ height: calc(100% - 60px);
       padding: 0px 20px;
     }
     .navigation{
-        width: 100%;
+        width: calc(100% - 200px);
     }
     .shop_div{
         position: relative;
