--- a/src/style.css
+++ b/src/style.css
@@ -1851,6 +1851,10 @@ height: calc(100% - 60px);
     .navigation{
         width: calc(100% - 200px);
     }
+    .navigation li{
+        font-size: 20px;
+        margin-right: 15px !important;
+    }
     .shop_div{
         position: relative;
     }
