--- a/src/mstyle.css
+++ b/src/mstyle.css
@@ -7,8 +7,8 @@
     position: relative;
 }
 .mobile_btn_wrap .logo{
-    width: 120px;
-    height: 30px;
+    width: 100px;
+    height: 22px;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -22,7 +22,7 @@
 .mnavigation{
     background-color: #d9d9d9;
     position: absolute;
-    top: 70px;
+    top: 52px;
     left: 0;
     z-index: 1000;
     padding: 10px;
@@ -41,4 +41,25 @@
 .shopcart>a{
     font-size: 20px;
     color: #fff;
+}
+.msort_box{
+    display: flex;
+    padding: 10px 0;
+}
+.msort_box>li{
+    position: relative;
+}
+.mobile_sort{
+    z-index: 1000;
+    background-color: #fff;
+    width: 100%;
+    position: absolute;
+    top: 32px;
+    left: 0;
+}
+.sortbtnss{
+    height: auto;
+}
+.mobile_sort .sortbtn{
+    display: none;
 }
