--- a/src/style.css
+++ b/src/style.css
@@ -433,9 +433,7 @@
     color: #a1a1a1;
     font-weight: 900;
 }
-.product_wrap .product_title{
-    width: 200px;
-}
+
 .product_title .product_d{
     color: #0b255b;
     font-weight: 900;
@@ -450,7 +448,7 @@
     flex-direction: column;
 }
 .product_d.detail{
-    width: 200px;
+    width: 100%sort_box;
     height: 40px;
     color: #a1a1a1;
     font-weight: 700;
@@ -547,6 +545,7 @@ justify-content: space-between;
 }
 
 .product_wrap .gridflex a {
+    width: 100%;
     height: 100%;
     position: relative;
     display: flex;
@@ -580,7 +579,7 @@ justify-content: space-between;
     display: flex;
 }
 .productwrap2_wrap{
-    width: 100%;
+    width: 200px;
 }
 .productwrap2 .count_wrap{
     margin-right: 20px;
@@ -1889,6 +1888,9 @@ height: calc(100% - 60px);
     .productwrap1 .btnsytle{
         width: 80px;
     }
+    .productwrap2_wrap{
+        width: 100%;
+    }
 
   }
   @media screen and (max-width: 1200px) {
@@ -1910,6 +1912,7 @@ height: calc(100% - 60px);
     .productwrap1 .btnsytle{
         width: 50px;
     }
+    
   }
 /* 태블릿 */
   @media screen and (max-width: 980px) {
