--- a/src/style.css
+++ b/src/style.css
@@ -131,10 +131,19 @@
   
 
 .main{
-    padding: 10px 0;
+    padding: 10px 0 80px 10px;
     min-height: calc(100vh - 400px);
     position: relative;
 
+}
+.login_logo>a{
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+.login_logo>a>img{
+    width: 100%;
+    height: 100%;
 }
 /* innerSearch */
 .sdiv{
@@ -812,10 +821,16 @@ line-height: 16px;
     font-size: 22px;
     font-weight: 900;
 }
-.shop_d_box>a>button{
+.shop_d_box>a>button, .cartbuybtn{
     width: 100%;
     background-color: #0b255b;
     color: #fff;
+}
+.cartbuybtn{
+    width: 170px !important;
+    height: 50px !important;
+    font-size: 22px;
+    font-weight: 900;
 }
 .shop_d_d{
     justify-content: left;
@@ -1051,6 +1066,7 @@ margin-bottom: 10px;
     color: #fff;
 }
 .menu-bar {
+    z-index: 60;
     position: fixed;
     top: 0;
     right: -300px; /* 초기에 오른쪽으로 숨김 */
@@ -1229,6 +1245,7 @@ margin-top: 20px;
 }
 .login_logo{
     text-align: center;
+    margin: auto;
 }
 .loginbtn{
     width: 100%;
@@ -1381,6 +1398,7 @@ width: calc(100% - 100px);
 }
 .totalp_wrap{
     display: flex;
+    align-items: center;
     width: 100%;
     justify-content: space-between;
     position: absolute;
@@ -1872,6 +1890,18 @@ height: calc(100% - 60px);
     color: #000;
     padding: 5px 0;
 }
+.carticon{
+    font-size: 60px;
+    color: #828282;
+  
+}
+.pcenter{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -50%);
+}
 @media screen and (max-width: 1480px) {
     .displaybox{
       width: 100%;
@@ -1946,6 +1976,9 @@ height: calc(100% - 60px);
   }
 /* 태블릿 */
   @media screen and (max-width: 980px) {
+    .main{
+        padding-top: 52px !important;
+    }
     .displaybox{
         padding: 0px 10px;
     }
@@ -2039,12 +2072,25 @@ height: calc(100% - 60px);
         width: 80px;
         flex-direction: column;
     }
+    .check_wrap{
+        display: block;
+    }
+    .cart_check_wrap{
+        width: 100%;
+    }
   }
   /* 모바일 */
 
   @media screen and (max-width: 720px) {
     .productwrap1 .ant-checkbox-group{
         display: block !important;
+    }
+    .login_logo{
+        width: 80%;
+    }
+   
+    .allbox{
+        width: 100%;
     }
     .productwrap1 .productbox{
         width: 100%;
@@ -2076,6 +2122,7 @@ height: calc(100% - 60px);
     .noticecons>div:first-child{
         margin-bottom: 20px;
     }
+   
   
   }
   @media screen and (max-width: 500px) {
