--- a/src/style.css
+++ b/src/style.css
@@ -1399,7 +1399,7 @@ width: calc(100% - 100px);
 .totalp_wrap{
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 97%;
     justify-content: space-between;
     position: absolute;
     bottom: 0;
@@ -1907,7 +1907,8 @@ height: calc(100% - 60px);
       width: 100%;
       
       overflow: hidden;
-      padding: 0px 20px;
+      padding-left: 20px;
+      padding-right: 20px;
     }
    
     .navigation li{
@@ -1976,8 +1977,17 @@ height: calc(100% - 60px);
   }
 /* 태블릿 */
   @media screen and (max-width: 980px) {
+    .footer_logo, .footer_d {
+        margin-right: 30px;
+    }
+    
     .main{
         padding-top: 52px !important;
+        padding-bottom: 30px !important;
+        min-height: calc(100vh - 150px);
+    }
+    .cartcon{
+        padding-bottom: 90px !important;
     }
     .displaybox{
         padding: 0px 10px;
