--- a/src/style.css
+++ b/src/style.css
@@ -24,11 +24,25 @@
     font-weight: 900;
     line-height: 22px;
 }
+.f20{
+    font-size: 20px !important;
+    font-weight: 900;
+    line-height: 20px;
+}
 .tx{
     text-decoration: line-through;
 }
 .tx>span:last-child{
     text-decoration: unset !important;
+}
+.none{
+    display: none !important;
+}
+.flex{
+    display: flex;
+}
+.flex.j{
+    justify-content: space-between;
 }
 .pricebox{
     position: relative;
@@ -426,40 +440,32 @@
 .breacrumb{
     padding: 10px 0;
 }
-.productwrap2 .gridflex .gridflex{
-    width: calc(100% - 110px);
-}
-.productwrap2 .ant-col{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.productwrap2 .product_title{
-    display: flex;
-    align-items: center;
-}
+
+/* 쇼핑몰 */
+
 .brandt{
     margin-right: 10px;
     color: #a1a1a1;
     font-weight: 900;
 }
 
-.product_title .product_d{
+.grid2 .product_d{
+    font-size: 18px;
     color: #0b255b;
     font-weight: 900;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    padding: 5px 0;
 }
-.productwrap2 .productwrap2_wrap_div{
-    width: calc(100% - 160px);
-    margin-right: 20px;
-    display: flex;
+.grid2 .brandt, .grid2 .valueid, .grid2 .product_d.detail{
+color: #000;
+}
+.flexc{
     flex-direction: column;
 }
 .product_d.detail{
-    width: 100%sort_box;
+    width: 100%;
     height: 40px;
     color: #a1a1a1;
     font-weight: 700;
@@ -468,17 +474,7 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
-.productwrap2 .product_d.detail{
-    width: 100%;
-}
 
-.productwrap1 .gridcolum{
-    width: calc(100% - 200px);
-    height: 100%;
-}
-.productwrap2 .other_wrap{
-    width: 100px;
-}
 .other_wrap .ant-tag{
     padding: 0;
     margin-inline-end: 5px;
@@ -494,76 +490,7 @@
 .functionbtn_wrap{
     display: flex;
 }
-.productbox{
-    position: relative;
-}
-.productbox:hover .productbg{
-    opacity: 30%;
-    background-color: #828282;
-}
-.productbg{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-  
-    z-index: 30;
-}
-.productwrap1 .productbox:nth-child(1){
-    border-top: 1px solid #bbbbbb;
-}    
 
-.productwrap1 .productbox:nth-child(2){
-    border-top: 1px solid #bbbbbb;
-}    
-.productwrap1 .productbox{
-    width: calc(50% - 10px);
-    padding: 10px;
-    border-bottom: 1px solid #bbbbbb;
-}
-.productwrap1 .ant-checkbox-group{
-justify-content: space-between;
-}
-.productwrap2 .productbox{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding : 10px 10px;
-    width: 100%;
-    border-bottom: 1px solid #bbbbbb;
-}
-.productwrap2 .neeedsbtn{
-    margin-bottom: 5px;
-}
-.productwrap2 .productbox:nth-child(1){
-    border-top: 1px solid #bbbbbb;
-}
-.productwrap2 .functionbtn_wrap{
-    flex-direction: column;
-}
-.productwrap1 .counterbtrn_wrap{
-    justify-content: left;
-}
-.gridflex{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
- 
-}
-.product_wrap .gridflex{
-    height: 150px;
-    width: 100%;
-}
-
-.product_wrap .gridflex a {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
 
 /* shop페이지 */
 .ant-checkbox-group{
@@ -571,116 +498,99 @@ justify-content: space-between;
     display: flex;
     flex-wrap: wrap;
 }
-.product_wrap.wide .productbox{
-    width: 100% !important;
+.productbox{
+    position: relative;
+    padding: 5px;
 }
-.product_wrap .productbox{
-    border: 1px solid #bbbbbb;
-    width: calc(20% - 8px);
-    margin-bottom: 10px;
+.mr10{
+    margin-right: 10px;
+}
+.grid2{
     padding: 10px;
-    margin-right: 10px;
-    position: relative;
+    transition: all 0.5s ease-out;
 }
-.product_wrap .productbox:nth-child(5n){
-    margin-right: 0px;
-}
-.product_wrap, .productwrap1 {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-}
-.product_flex{
-    display: flex;
-}
-.productwrap2_wrap{
-    width: 200px;
-}
-.productwrap2 .count_wrap{
-    margin-right: 20px;
-    margin-top: 12px;
-}
-.productwrap2 .product_flex{
-   justify-content: left;
-}
-.product_flex>p{
-    margin-right: 5px;
-}
-.product_wrap .product_list{
-    display: flex;
-    flex-direction: column;
+.grid3wrap{
+    width: calc(100% - 80px);
     justify-content: space-between;
-    position: relative;
-    
 }
-
-.productwrap1 .product_pic{
-    width: 200px;
-    height: 180px;
-    margin-right: 20px;
-}
-
-.product_wrap .other_wrap{
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    right: 10px;
-    bottom: 45px;
-}
-.productwrap1 .other_wrap{
-    display: flex;
-    margin: 5px 0px;
-}
-.othertag{
-    font-size: 12px !important;
-}
-.productwrap1 .othertag, .product_wrap .othertag{
-    margin-right: 10px;
-}
-
-.productwrap2 .product_list .gridflex .gridflex a{
-   display: flex;
-   width: calc(100% - 330px);
-   margin-right: 10px;
-   justify-content: space-between;
-}
-.productwrap2 .product_list .product_pic{
-    width: 80px;
-    height: 80px;
-    margin-right: 10px;
- }
- .productwrap2 .product_list{
-
-    width: 100%;
- }
-.product_list p{
-    color: #000;
-}
-.none{
+.product_de{
+    width: 60%;
     display: none;
 }
-.product_pic{
-    display: block;
-    width: 100%;
-    height: 160px;
-  
-    overflow: hidden;
+.grid2 .other_wrap{
+    margin-right: 10px;
 }
-.product_pic:hover img{
-    transform: scale(1.3);
+.grid3 .pricebox{
+    width: 120px;
+}
+.productbox.grid1 {
+    display: flex;
+    flex-direction: column;
+    width: calc(20% - 8px);
+    margin-right: 10px;
+}
+.productbox.grid3 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+.grid3 .product_pic{
+    width: 70px;
+    height: 70px;
+}
+.productbox.grid1:nth-child(5n){
+    margin-right: 0;
+}
+.grid1 .product_pic{
+    height: 200px;
 }
 .product_pic img{
     width: 100%;
     height: 100%;
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
+}
+.productbox.grid2 {
+    display: flex;
+    flex-direction: column;
+    width: calc(50% - 10px);
+}
+.product_pic_bg{
+    width: 100%;
+    height: 100%;
+    background-color: #d9d9d9;
+    position: absolute;
+    display: block;
+    opacity: 0;
+    transition: all 0.5s ;
+}
+.grid2:hover .product_pic_bg{
+    opacity: 0.7;
+}
+.grid2:hover .product_de{
+    display: flex;
+}
+.productbox.grid2:nth-child(2n) {
+    margin-left: 10px;
+}
+.grid2 .product_pic{
+    position: relative;
+    display: block;
+    height: 500px;
+}
+.abpostion{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.product_wrap.wide .productbox{
+    width: 100% !important;
 }
 .shop_div{
     display: flex;
-    justify-content: left;
-    position: relative;
+}
+.pinfobox>p{
+margin-right: 5px;
 }
 /* 좌측 네비게이션  */
 .shop_sort{
@@ -1982,57 +1892,21 @@ color: #000;
         transition: right 0.3s ease-in-out;
       }
       
-   
-    .product_wrap .productbox{
-        width: calc(25% - 8px);
-    }
-    .product_wrap.wide .productbox{
-        width: 100% !important;
-      }
-    .product_wrap .productbox:nth-child(4n) {
-        margin-right: 0px;
-    }
-    .product_wrap .productbox:nth-child(5n) {
-        margin-right: 8px;
-    }
-    .sorting_list_btn button{
-        padding: 10px;
-    }
-    .footer_logo , .footer_d{
-        margin-right: 70px;
-    }
-    .productwrap1 .product_pic{
-        width: 140px;
-    }
-    .productwrap1 .gridcolum{
-        width: calc(100% - 160px);
-    }
-    .productwrap1 .btnsytle{
-        width: 80px;
-    }
-    .productwrap2_wrap{
-        width: 100%;
-    }
+  
 
   }
   @media screen and (max-width: 1200px) {
-    .product_wrap .productbox{
-        width: calc(33.3333% - 8px);
+    .productbox.grid1 {
+        width: calc(25% - 8px);
     }
-    .product_wrap .productbox:nth-child(3n) {
-        margin-right: 0px;
+    .productbox.grid1:nth-child(4n) {
+        margin: 0;
     }
-    .product_wrap .productbox:nth-child(4n) {
-        margin-right: 8px;
+    .productbox.grid1:nth-child(5n) {
+        margin-right: 10px;
     }
-    .productwrap1 .product_pic{
-        width: 100px;
-    }
-    .productwrap1 .gridcolum{
-        width: calc(100% - 120px);
-    }
-    .productwrap1 .btnsytle{
-        width: 50px;
+    .grid2 .btnsytle{
+        width: 60px;
     }
     
   }
@@ -2081,15 +1955,7 @@ color: #000;
     .sort_navi>li:last-child{
         border-right: 1px solid #a1a1a1;;
     }
-    .productwrap1 .product_pic{
-        width: 100px;
-    }
-    .productwrap1 .gridcolum{
-        width: calc(100% - 120px);
-    }
-    .productwrap1 .btnsytle{
-        width: 50px;
-    }
+ 
     .sortTitle{
         display: none;
     }
@@ -2151,58 +2017,37 @@ color: #000;
     .cart_check_wrap{
         width: 100%;
     }
-    .productwrap1 .othertag, .product_wrap .othertag{
-        margin-right: 0px;
-    }
-    .product_wrap .other_wrap{
-        right: 5px;
-    }
+   
     .dcvalue{
         left: 55px;
         top: 1px;
     }
-    .product_wrap .counterbtrn_wrap{
-        justify-content: space-between;
-    }
-     .product_wrap .counterbtrn_wrap button{
-        width: calc(30% - 3px);
-        margin: 0;
-    }
-    .product_wrap .testbox {
-        width: calc(40% - 3px);
-        margin: 0;
-    }
-    .product_wrap .count_wrap{
-        margin: 0;
-    }
+    
     .tx{
         font-size: 12px !important;
     }
     .pricebox .product_d{
         font-size: 18px !important;
     }
-    .productwrap2 .btnsytle{
-        width: 70px;
-    }   
-    .productwrap2 .pricebox{
-        width: 80px;
+    .productbox.grid1 {
+        width: calc(33.333% - 8px);
     }
-    .productwrap2 .productwrap2_wrap_div{
-        width: calc(100% - 100px);
+    .productbox.grid1:nth-child(3n) {
+        margin: 0;
+    }
+    .productbox.grid1:nth-child(4n) {
         margin-right: 10px;
     }
-    .productwrap2 .other_wrap{
-        width: 80px;
+    .counter{
+        padding: 0px 5px;
+        width: 25px;
     }
   }
   /* 모바일 */
 
   @media screen and (max-width: 720px) {
-    .productwrap1 .ant-checkbox-group{
-        display: block !important;
-    }
-    .productwrap2 .productwrap2_wrap_div{
-        width: 200px;
+    .productbox.grid2{
+        width: 100%;
     }
     .login_logo{
         width: 80%;
@@ -2213,27 +2058,7 @@ color: #000;
     .allbox{
         width: 100%;
     }
-    .productwrap1 .productbox{
-        width: 100%;
-    }
-    .productwrap1 .product_pic{
-        width: 140px;
-    }
-    .productwrap1 .gridcolum{
-        width: calc(100% - 160px);
-    }
-    .productwrap1 .btnsytle{
-        width: 50px;
-    }
-    .product_wrap .productbox{
-        width: calc(50% - 8px);
-    }
-    .product_wrap .productbox:nth-child(2n) {
-        margin-right: 0px !important;
-    }
-    .product_wrap .productbox:nth-child(3n) {
-        margin-right: 10px;
-    }
+   
     .noticecons{
         display: block;
     }
@@ -2284,7 +2109,16 @@ color: #000;
     .eventpgWrap:last-child{
         margin-bottom: 0px;
     }
+    .productbox.grid1 {
+        width: calc(50% - 8px);
+    }
     
+    .productbox.grid1:nth-child(3n) {
+        margin-right: 10px !important;
+    }
+    .productbox.grid1:nth-child(2n) {
+        margin-right: 0 !important;
+    }
   
   }
   @media screen and (max-width: 500px) {
@@ -2302,20 +2136,5 @@ color: #000;
         width: 100%;
         height: 100%;
     }
-    /* .product_wrap .productbox{
-        width: 100%;
-        margin-right: 0px;
-    }
-    .product_wrap .counterbtrn_wrap{
-        justify-content: space-between;
-    }
-    .product_wrap .counterbtrn_wrap button{
-        width: calc(33.333% - 10px) !important;
-    }
-    .product_wrap .counterbtrn_wrap  .testbox{
-        width: calc(33.333% - 10px) !important;
-    }
-    .product_wrap .counterbtrn_wrap  .testbox .count_wrap{
-        width: 100%;
-    } */
+   
   }
